Fix layout issue: fullscreen on mobile should use safe-area-inset-top

--- a/components/SiteTopBar/styles.scss
+++ b/components/SiteTopBar/styles.scss
@@ -11,61 +11,6 @@
   bottom: 0.1rem;
 }
 
-.site-top-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  line-height: 2.3;
-  padding: calc(env(safe-area-inset-top) + 0.25rem) 0.75rem 0.25rem 0.75rem;
-  color: #777;
-  font-size: 0.875rem;
-  .btn,
-  a {
-    line-height: 2.3rem;
-  }
-  &.site-top-bar-light {
-    background-color: white;
-    .btn,
-    a {
-      color: #000000aa;
-      &:hover {
-        color: $bg-color-dark-1;
-      }
-    }
-  }
-  &.site-top-bar-dark {
-    background-color: $bg-color-dark-1;
-    .btn,
-    a {
-      color: #ffffffaa;
-      &:hover {
-        color: white;
-      }
-    }
-  }
-  .btn {
-    margin: 0 0 0 0.3rem;
-    padding: 0;
-  }
-
-  &.site-top-bar-menu-bar {
-    width: 100vw;
-    position: sticky;
-    top: 0;
-    z-index: 99;
-  }
-
-  .language-flag-and-name {
-    line-height: 1;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    text-align: left;
-  }
-}
-
 .zerotohero-wide {
   .site-top-bar {
     left: 13rem;
